<resources>
    <string name="label_start">Shaman</string>
    <string name="label_settings">Settings</string>
    <string name="label_about">About author</string>

    <string name="todo" translatable="false">TODO</string>
    <string name="WeatherPoint">Weather in …</string>
    <string name="WeatherMain">Weather, main</string>
    <string name="Temperature">Temperature</string>
    <string name="Wind">Wind</string>
    <string name="WindSpeedUnit">m/s</string>
    <string name="Pressure">Atmospheriс Pressure</string>
    <string name="PressureUnit_hPa">hPa</string>
    <string name="PressureUnit_mmHg">mmHg</string>
    <string name="SunMoving">Sunrise/Sunset</string>
    <string name="City">City</string>
    <string name="Humidity">Humidity</string>

    <string name="DebugPoint">Moscow</string>
    <string name="DebugTemperature" translatable="false">+25°C</string>
    <string name="DebugWeather">clear sky</string>
    <string name="DebugPressure">750 mmHg</string>
    <string name="DebugWind">SW 15 m/s</string>
    <string name="DebugSun">Sunrise 06:00, Sunset 20:00</string>
    <string name="DebugHumidity" translatable="false">19%</string>

    <string name="spnPointsPrompt">Choose weather point</string>
    <string name="settings_activity_label">Settings</string>

    <string name="Sun">Sun</string>
    <string name="Sunset">Sunset</string>
    <string name="Sunrise">Sunrise</string>

    <string name="YandexWheatherURL" translatable="false">https://yandex.ru/pogoda/</string>
    <string name="YandexWeather">Yandex Wheather Forecast</string>

    <string name="Theme">Theme:</string>
    <string name="ThemeSystem">System</string>
    <string name="ThemeLight">Light</string>
    <string name="ThemeDark">Dark</string>
    <string name="weather_description">Weather description</string>

    <string name="wind_north">Nord</string>
    <string name="wind_north_east">Nord-East</string>
    <string name="wind_east">East</string>
    <string name="wind_south_east">South-East</string>
    <string name="wind_south">South</string>
    <string name="wind_south_west">South-West</string>
    <string name="wind_west">West</string>
    <string name="wind_north_west">Nord-West</string>

    <string name="incorrect_data">incorrect data</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">CHPL Studio</string>
    <string name="nav_header_subtitle" translatable="false">chepel.alexander@gmail.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_accu_weather" translatable="false">AccuWeather</string>
    <string name="menu_clima_cell" translatable="false">ClimaCell</string>
    <string name="menu_dark_sky_weather" translatable="false">Dark Sky Weather</string>
    <string name="menu_weather_2020" translatable="false">Weather2020</string>
    <string name="menu_weather_bit" translatable="false">WeatherBit</string>
    <string name="menu_yandex_wheather" translatable="false">Yandex Wheather</string>
    <string name="menu_About">About author</string>

    <string name="DebugMenuAccureWeather" translatable="false">Open site AccureWeather</string>
    <string name="DebugMenuClimaCell" translatable="false">Open site ClimaCell</string>
    <string name="DebugMenuDarkSkyWeather" translatable="false">Open site Dark Sky Weather</string>
    <string name="DebugMenuWeather2020" translatable="false">Open site Weather2020</string>
    <string name="DebugMenuWeatherBit" translatable="false">Open site WeatherBit</string>
    <string name="DebugMenuYandexWeather" translatable="false">Open site Yandex Weather</string>
    <string name="DebugMenuAboutAuthor" translatable="false">Open page About Author</string>
    <string name="debug_fragment_start" translatable="false">Start fragment</string>
    <string name="debug_fragment_settings" translatable="false">Settings fragment</string>
    <string name="debug_fragment_about" translatable="false">About fragment</string>
    <string name="author_name">Alexander Chepel</string>
    <string name="author_status">Student, Android development, GeekBrains Univercity</string>
    <string name="whatsapp" translatable="false">WhatsApp</string>
    <string name="facebook" translatable="false">Facebook</string>
    <string name="linkedin" translatable="false">Linkedin</string>
    <string name="instagram" translatable="false">Instagram</string>
    <string name="telegram" translatable="false">Telegram</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="image_author" translatable="false">Image of Author</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="label_locations">Locations</string>


</resources>