<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/fragmentDetails"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="parent"
    android:tag="fragmentDetails">

    <TableLayout
        android:id="@+id/tblWeatherDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TableRow
            android:id="@+id/rowWeather"
            style="@style/view_details_row">

            <ImageView
                android:id="@+id/imgWeather"
                android:contentDescription="@string/weather_description"
                style="@style/view_images_cell"
                app:srcCompat="@drawable/ic_baseline_filter_drama_24" />

            <TextView
                android:id="@+id/txtWeather"
                style="@style/view_details_cell"
                android:text="@string/DebugWeather"/>

        </TableRow>

        <TableRow
            android:id="@+id/rowWind"
            style="@style/view_details_row">

            <ImageView
                android:id="@+id/imgWind"
                android:contentDescription="@string/Wind"
                style="@style/view_images_cell"
                app:srcCompat="@drawable/ic_wind" />

            <TextView
                android:id="@+id/txtWind"
                style="@style/view_details_cell"
                android:text="@string/DebugWind"/>

        </TableRow>

        <TableRow
            android:id="@+id/rowPressure"
            style="@style/view_details_row">

            <ImageView
                android:id="@+id/imgPressure"
                android:contentDescription="@string/Pressure"
                style="@style/view_images_cell"
                app:srcCompat="@drawable/ic_pressure"/>

            <TextView
                android:id="@+id/txtPressure"
                style="@style/view_details_cell"
                android:text="@string/DebugPressure" />

        </TableRow>

        <TableRow
            android:id="@+id/rowHumidity"
            style="@style/view_details_row">

            <ImageView
                android:id="@+id/imgHumidity"
                android:contentDescription="@string/Humidity"
                style="@style/view_images_cell"
                app:srcCompat="@drawable/ic_humidity"/>

            <TextView
                android:id="@+id/txtHumidity"
                style="@style/view_details_cell"
                android:text="@string/DebugHumidity"/>

        </TableRow>

        <TableRow
            android:id="@+id/rowSun"
            style="@style/view_details_row">

            <ImageView
                android:id="@+id/imgSunMoving"
                android:contentDescription="@string/Sun"
                style="@style/view_images_cell"
                app:srcCompat="@drawable/ic_sun_moving" />

            <TextView
                android:id="@+id/txtSun"
                style="@style/view_details_cell"
                android:text="@string/DebugSun"/>

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>