<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtPoint"
                style="@style/view_settings"
                android:text="@string/DebugPoint"
                android:textSize="18sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPoints"
                style="@style/view_settings" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkBoxPressure"
                style="@style/view_settings"
                android:text="@string/Pressure" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkBoxWind"
                style="@style/view_settings"
                android:text="@string/Wind" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkBoxSun"
                style="@style/view_settings"
                android:text="@string/Sun" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkBoxMoon"
                style="@style/view_settings"
                android:text="@string/Moon" />

            <RadioGroup
                android:id="@+id/rdTheme"
                style="@style/view_settings"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/lblTheme"
                    style="@style/view_theme_group"
                    android:text="@string/Theme" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rbThemeSystem"
                    style="@style/view_theme_group"
                    android:text="@string/ThemeSystem" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rbThemeLight"
                    style="@style/view_theme_group"
                    android:text="@string/ThemeLight" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rbThemeDark"
                    style="@style/view_theme_group"
                    android:text="@string/ThemeDark" />
            </RadioGroup>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>