<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_graph"
    app:startDestination="@id/fragmentStart">
    <fragment
        android:id="@+id/fragmentStart"
        android:name="com.example.myapp.FragmentStart"
        android:label="@string/label_start"
        tools:layout="@layout/fragment_start" />
    <fragment
        android:id="@+id/fragmentSettings"
        android:name="com.example.myapp.FragmentSettings"
        android:label="@string/label_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/fragmentAbout"
        android:name="com.example.myapp.FragmentAbout"
        android:label="@string/label_about"
        tools:layout="@layout/fragment_about" />
</navigation>