<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About.FragmentAbout" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/container_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtName"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/author_name"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@id/txtStatus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtStatus"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/author_status"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/image_author"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtName" />

        <ImageView
            android:id="@+id/image_author"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@mipmap/ic_author"
            android:contentDescription="@string/image_author"
            app:layout_constraintTop_toBottomOf="@id/txtStatus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_1">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                style="@style/view_details_row">

                <ImageView
                    android:id="@+id/image_whatsapp"
                    style="@style/view_images_cell_author"
                    android:contentDescription="@string/whatsapp"
                    android:src="@drawable/ic_whatsapp" />

                <ImageView
                    android:id="@+id/image_facebook"
                    style="@style/view_images_cell_author"
                    android:contentDescription="@string/facebook"
                    android:src="@drawable/ic_facebook" />

            </TableRow>

            <TableRow
                style="@style/view_details_row">

                <ImageView
                    android:id="@+id/image_linkedin"
                    style="@style/view_images_cell_author"
                    android:contentDescription="@string/linkedin"
                    android:src="@drawable/ic_linkedin" />

                <ImageView
                    android:id="@+id/image_instagram"
                    style="@style/view_images_cell_author"
                    android:contentDescription="@string/instagram"
                    android:src="@drawable/ic_instagram" />

            </TableRow>

            <TableRow
                style="@style/view_details_row">

                <ImageView
                    android:id="@+id/image_telegram"
                    style="@style/view_images_cell_author"
                    android:contentDescription="@string/telegram"
                    android:src="@drawable/ic_telegram" />

                <ImageView
                    android:id="@+id/image_email"
                    style="@style/view_images_cell_author"
                    android:contentDescription="@string/email"
                    android:src="@drawable/ic_email" />

            </TableRow>

        </TableLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>