<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/fragmentMain"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="parent">

    <TextView
        android:id="@+id/txtPoint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingStart="5sp"
        android:paddingTop="5sp"
        android:paddingEnd="5sp"
        android:paddingBottom="5sp"
        android:text="@string/DebugPoint"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/imgYandexWeather"         />

    <ImageView
        android:id="@+id/imgYandexWeather"
        android:layout_width="106dp"
        android:layout_height="109dp"
        android:contentDescription="@string/YandexWeather"
        android:src="@drawable/yandex_weather"
        app:layout_constraintTop_toBottomOf="@+id/txtPoint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/txtTemperature"/>

    <TextView
        android:id="@+id/txtTemperature"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:paddingStart="5sp"
        android:paddingTop="5sp"
        android:paddingEnd="5sp"
        android:paddingBottom="5sp"
        android:text="@string/DebugTemperature"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toBottomOf="@+id/imgYandexWeather"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>